--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "lodash": "^4.17.21",
         "mongoose": "^5.11.14",
         "morgan": "^1.10.0",
+        "multer": "^1.4.2",
         "swagger-ui-express": "^4.1.6"
     }
 }
