--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "mongoose": "^5.11.14",
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
-        "swagger-ui-express": "^4.1.6"
+        "swagger-ui-express": "^4.1.6",
+        "yamljs": "^0.3.0"
     }
 }
