--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 DB = 'mongodb+srv://RustamovRR:riskiddin98@cluster0.895v8.mongodb.net/idrok-admin'
-BASE_URL = 'https://localhost:5000'
+BASE_URL = 'http://188.227.85.5:5000'
