feat: add new fields named "firstLessonDate" and "isOdd"

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 DB = 'mongodb+srv://idrok:DVNAvsrMWnLUmAEx@cluster0.9ujds.mongodb.net/idrok-admin'
-BASE_URL = 'http://188.227.85.5:5000'
+BASE_URL = 'http://localhost:5000'
